# Image-processor

./: CMakeLists.txt  README.md  image_processor.cpp
include/: filter.h  filters.h  image.h  image_processor.h
src/: filters.cpp  image.cpp  image_processor.cpp
